# ROS-_for_Study

ws00_helloworld/: 创建工作目录和功能包.text
ws00_helloworld/install/: local_setup.sh  setup.sh
ws00_helloworld/log/: latest_build
ws00_helloworld/src/pkg01_helloworld_cpp/: CMakeLists.txt  配置文件介绍和执行.text
ws00_helloworld/src/pkg01_helloworld_cpp/src/: helloworld.cpp  helloworld2.cpp
ws00_helloworld/src/pkg02_helloworld_py/: package.xml  setup.py  配置文件.text
ws00_helloworld/添加到~/: .bashrc目录.text
ws01_plumbing/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws01_plumbing/log/: latest_build
ws01_plumbing/src/base_interfaces/: CMakeLists.txt  package.xml
ws01_plumbing/src/base_interfaces/action/: Progress.action
ws01_plumbing/src/base_interfaces/srv/: Addints.srv
ws01_plumbing/src/cpp01_topic/: CMakeLists.txt
ws01_plumbing/src/cpp01_topic/src/: demo01_talker_str.cpp
ws01_plumbing/src/cpp01_topic_re/: CMakeLists.txt
ws01_plumbing/src/cpp01_topic_re/src/: demo01_talker_str.cpp  demo02_listener_str.cpp  demo03_talker_stu.cpp  (+1 more)
ws01_plumbing/src/cpp02_service/: CMakeLists.txt
ws01_plumbing/src/cpp03_action/: CMakeLists.txt
ws01_plumbing/src/cpp04_prarm/: CMakeLists.txt
ws01_plumbing/src/install/: local_setup.sh  setup.sh
ws01_plumbing/src/log/: latest_build
ws01_plumbing/src/py01_topic/: package.xml  setup.py
ws01_plumbing/src/py01_topic_re/: package.xml  setup.cfg  setup.py
ws01_plumbing/src/py02_service/: setup.py
ws01_plumbing/src/py03_action/: package.xml  setup.py
ws01_plumbing/src/tutorails_plumbing/: package.xml
(+113 files in other folders)
