<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>base_interfaces</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="115347950+HeKaiLang@users.noreply.github.com">kl</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- action 1 （action构建工具依赖）-->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <!--  2 -->
  <depend>action_msgs</depend>

  <!-- 自定义消息 1   -->
  <build_depend>rosidl_default_generators</build_depend>
  <!--  2   -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <!--  3   -->
  <member_of_group>rosidl_interface_packages</member_of_group>
 
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
